--- a/content/ml/supervised/10 ensemble learning/homework.ipynb
+++ b/content/ml/supervised/10 ensemble learning/homework.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "a0677de5",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "f535cc74",
    "metadata": {},
    "outputs": [
@@ -109,8 +109,8 @@
     "knn_clf = KNeighborsClassifier()\n",
     "\n",
     "voting_clf = VotingClassifier(estimators=[\n",
-    "    ('log_clf', log_clf),\n",
-    "    ('svc_clf', svc_clf),\n",
+    "    ('log_clf', log_clf), \n",
+    "    ('svc_clf', svc_clf), \n",
     "    ('knn_clf', knn_clf)\n",
     "], voting='soft')\n",
     "\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "97cec041",
    "metadata": {},
    "outputs": [
@@ -131,13 +131,15 @@
      "output_type": "stream",
      "text": [
       "Random Forest Accuracy (100 trees): 0.9649\n",
-      "Random Forest Accuracy (10 trees): 0.9561\n"
+      "Random Forest Accuracy (10 trees): 0.9561\n",
+      "Accuracy: 0.956140350877193\n"
      ]
     }
    ],
    "source": [
     "# Bagging (RandomForest)\n",
-    "\n",
+    "from sklearn.ensemble import BaggingClassifier \n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "rf_clf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
@@ -151,12 +153,24 @@
     "rf_clf_small.fit(X_train, y_train)\n",
     "y_pred_rf_small = rf_clf_small.predict(X_test)\n",
     "acc_rf_small = accuracy_score(y_test, y_pred_rf_small)\n",
-    "print(f\"Random Forest Accuracy (10 trees): {acc_rf_small:.4f}\")"
+    "print(f\"Random Forest Accuracy (10 trees): {acc_rf_small:.4f}\")\n",
+    "\n",
+    "\n",
+    "model = BaggingClassifier(\n",
+    "    estimator=DecisionTreeClassifier(max_depth=5, random_state=42),\n",
+    "    n_estimators=50,        # 50 ta daraxt\n",
+    "    bootstrap=True,\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "model.fit(X_train, y_train)\n",
+    "y_pred = model.predict(X_test)\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "46631baf",
    "metadata": {},
    "outputs": [
@@ -191,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "a3e4d502",
    "metadata": {},
    "outputs": [
